# framework.appfw.pkgmgr-info

./: CMakeLists.txt  dump_pkgmgr.sh.in  pkgmgr-info.pc.in  pkgmgr-parser.manifest.in  project.config
TC/: com.samsung.testapp.xml
TC/unit/: Makefile  tslist  utc_ApplicationFW_pkgmgr_parser_check_manifest_validation_func.c  utc_ApplicationFW_pkgmgr_parser_get_manifest_file_func.c  utc_ApplicationFW_pkgmgr_parser_parse_manifest_for_installation_func.c  utc_ApplicationFW_pkgmgr_parser_parse_manifest_for_uninstallation_func.c  utc_ApplicationFW_pkgmgr_parser_parse_manifest_for_upgrade_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_destroy_appinfo_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_filter_add_bool_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_filter_add_int_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_filter_add_string_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_filter_count_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_filter_create_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_filter_destroy_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_filter_foreach_appinfo_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_foreach_appcontrol_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_foreach_category_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_get_appid_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_get_appinfo_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_get_apptype_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_get_component_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_get_exec_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_get_hwacceleration_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_get_icon_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_get_installed_list_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_get_label_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_get_list_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_get_mime_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_get_operation_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_get_pkgname_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_get_uri_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_is_autorestart_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_is_multiple_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_is_nodisplay_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_is_onboot_func.c  utc_ApplicationFW_pkgmgrinfo_appinfo_is_taskmanage_func.c  utc_ApplicationFW_pkgmgrinfo_create_certinfo_set_handle_func.c  utc_ApplicationFW_pkgmgrinfo_create_pkgdbinfo_func.c  utc_ApplicationFW_pkgmgrinfo_delete_certinfo_func.c  utc_ApplicationFW_pkgmgrinfo_destroy_certinfo_set_handle_func.c  (+45 more)
include/: pkgmgr-info-internal.h  pkgmgr-info.h  pkgmgrinfo_basic.h  pkgmgrinfo_debug.h  pkgmgrinfo_feature.h  pkgmgrinfo_private.h  pkgmgrinfo_type.h  pkgmgrinfo_zone.h
packaging/: pkgmgr-info.spec
parser/: CMakeLists.txt  delta_info.xsd.in  manifest.xsd.in  manifest.xsd.ref  pkgmgr_parser.c  pkgmgr_parser.h  pkgmgr_parser_db.c  pkgmgr_parser_db.h  pkgmgr_parser_db_util.c  pkgmgr_parser_db_util.h  pkgmgr_parser_feature.c  pkgmgr_parser_feature.h  pkgmgr_parser_internal.h  pkgmgr_parser_plugin.c  pkgmgr_parser_plugin.h  pkgmgr_parser_plugin_list.txt.in  pkgmgr_parser_resource.c  pkgmgr_parser_resource.h  pkgmgr_parser_signature.c  pkgmgr_parser_signature.h  preload_list.txt.in
src/: pkgmgr-info-internal.c  pkgmgrinfo_appinfo.c  pkgmgrinfo_basic.c  pkgmgrinfo_certinfo.c  pkgmgrinfo_client.c  pkgmgrinfo_db.c  pkgmgrinfo_feature.c  pkgmgrinfo_pkginfo.c  pkgmgrinfo_private.c  pkgmgrinfo_resource.c
